UPDATE: CLO-14010 - Modify profiler-engine-tests to run with jdk8/jdk9
added java.xml.bind module when building the engine with jdk9
removed obsolete MaxPermSize